feat: some ethic and demand adjustments for tenets

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -664,11 +664,11 @@
 	cooperative_unrest:0 "Unrest (Cooperative Attraction)"
 	cooperative_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YIndustrialism§!"
 
-	green_unrest:0 "Unrest (Ecologist Attraction)"
-	green_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YEcologism§!."
+	ecologist_unrest:0 "Unrest (Ecologist Attraction)"
+	ecologist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YEcologism§!."
 
-	industrial_unrest:0 "Unrest (Industrialism Attraction)"
-	industrial_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YIndustrialism§!"
+	industrialist_unrest:0 "Unrest (Industrialism Attraction)"
+	industrialist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YIndustrialism§!"
 
 	pluralist_unrest:0 "Unrest (Pluralist Attraction)"
 	pluralist_unrest_desc:0 "§HUnrest§! on this colony has caused local Pops to become more attracted to §YPluralism§!"
@@ -1114,6 +1114,8 @@
 
 
 # Attraction
+	POP_ATTRACTION_UNHEALTHY_ECONOMY_POS: "§G+ £empire£ Governing Ethics Government caused deficits§!"
+	POP_ATTRACTION_UNHEALTHY_ECONOMY_NEG: "§R- £empire£ Governing Ethics Government caused deficits§!"
 
 	POP_ATTRACTION_SOLITARY_POS:0 "§G+ Solitary Pops in Empire§!" 
 
@@ -1164,7 +1166,7 @@
 	POP_ATTRACTION_ENHANCED_LEADERS_POS:0 "§G+ Leader Enhancement Policy in Empire§!"
 	POP_ATTRACTION_COMPETITIVE_DIPLOMACY_POS:0 "§G+ Diplomacy with $ethic_competitive$ Empires (or Corporations)§!"
 	POP_ATTRACTION_COOPERATIVE_DIPLOMACY_POS:0 "§G+ Diplomacy with $ethic_cooperative$ Empires§!"
-	POP_ATTRACTION_GOVERNMENT_ETHIC_POS: "§G+ Governing ethics§!"
+	POP_ATTRACTION_GOVERNMENT_ETHIC_POS: "§G+ Governing Ethics§!"
 	POP_ATTRACTION_OLIGARCHIC_GOV_POS:1 "§G+ £empire£ Empire has Oligarchic Authority§!"
 	POP_ATTRACTION_OLIGARCHIC_GOV_NEG:1 "§R- £empire£ Empire has Oligarchic Authority§!"
 	POP_ATTRACTION_DEFENSIVE_WAR_POS:1 "§G+ £empire£ Empire is defending against Xenos§!"
