--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -10,6 +10,9 @@
  tec_cult_tec_cult_example_modifier: "$tec_cult_tec_cult_example$"
  tec_cult_tec_cult_example_header: "§H$tec_cult_tec_cult_example$§!"
  tec_cult_tec_cult_example_key: "tec_cult_tec_cult_example"
+ faction_demand_TEC_CULT_tec_cult_example: "$tec_cult_tec_cult_example$"
+ faction_demand_TEC_CULT_tec_cult_example_liked_desc: "Having the §Y$tec_cult_tec_cult_example$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_cult_example_disliked_desc: "Having the §Y$tec_cult_tec_cult_example$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_tenet_state_religion_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
  tec_has_tec_tenet_state_religion_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_state_religion']"
  tec_activate_cult_tec_tenet_state_religion: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_state_religion']"
@@ -21,6 +24,9 @@
  tec_cult_tec_tenet_state_religion_modifier: "$tec_cult_tec_tenet_state_religion$"
  tec_cult_tec_tenet_state_religion_header: "§H$tec_cult_tec_tenet_state_religion$§!"
  tec_cult_tec_tenet_state_religion_key: "tec_cult_tec_tenet_state_religion"
+ faction_demand_TEC_CULT_tec_tenet_state_religion: "$tec_cult_tec_tenet_state_religion$"
+ faction_demand_TEC_CULT_tec_tenet_state_religion_liked_desc: "Having the §Y$tec_cult_tec_tenet_state_religion$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_state_religion_disliked_desc: "Having the §Y$tec_cult_tec_tenet_state_religion$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_tenet_entrepreneur_economy_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_has_tec_tenet_entrepreneur_economy_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_activate_cult_tec_tenet_entrepreneur_economy: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
@@ -32,6 +38,9 @@
  tec_cult_tec_tenet_entrepreneur_economy_modifier: "$tec_cult_tec_tenet_entrepreneur_economy$"
  tec_cult_tec_tenet_entrepreneur_economy_header: "§H$tec_cult_tec_tenet_entrepreneur_economy$§!"
  tec_cult_tec_tenet_entrepreneur_economy_key: "tec_cult_tec_tenet_entrepreneur_economy"
+ faction_demand_TEC_CULT_tec_tenet_entrepreneur_economy: "$tec_cult_tec_tenet_entrepreneur_economy$"
+ faction_demand_TEC_CULT_tec_tenet_entrepreneur_economy_liked_desc: "Having the §Y$tec_cult_tec_tenet_entrepreneur_economy$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_entrepreneur_economy_disliked_desc: "Having the §Y$tec_cult_tec_tenet_entrepreneur_economy$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_tenet_public_employment_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
  tec_has_tec_tenet_public_employment_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_public_employment']"
  tec_activate_cult_tec_tenet_public_employment: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_public_employment']"
@@ -43,6 +52,9 @@
  tec_cult_tec_tenet_public_employment_modifier: "$tec_cult_tec_tenet_public_employment$"
  tec_cult_tec_tenet_public_employment_header: "§H$tec_cult_tec_tenet_public_employment$§!"
  tec_cult_tec_tenet_public_employment_key: "tec_cult_tec_tenet_public_employment"
+ faction_demand_TEC_CULT_tec_tenet_public_employment: "$tec_cult_tec_tenet_public_employment$"
+ faction_demand_TEC_CULT_tec_tenet_public_employment_liked_desc: "Having the §Y$tec_cult_tec_tenet_public_employment$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_public_employment_disliked_desc: "Having the §Y$tec_cult_tec_tenet_public_employment$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_tenet_reform_and_opening_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
  tec_has_tec_tenet_reform_and_opening_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
  tec_activate_cult_tec_tenet_reform_and_opening: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_reform_and_opening']"
@@ -54,6 +66,9 @@
  tec_cult_tec_tenet_reform_and_opening_modifier: "$tec_cult_tec_tenet_reform_and_opening$"
  tec_cult_tec_tenet_reform_and_opening_header: "§H$tec_cult_tec_tenet_reform_and_opening$§!"
  tec_cult_tec_tenet_reform_and_opening_key: "tec_cult_tec_tenet_reform_and_opening"
+ faction_demand_TEC_CULT_tec_tenet_reform_and_opening: "$tec_cult_tec_tenet_reform_and_opening$"
+ faction_demand_TEC_CULT_tec_tenet_reform_and_opening_liked_desc: "Having the §Y$tec_cult_tec_tenet_reform_and_opening$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_reform_and_opening_disliked_desc: "Having the §Y$tec_cult_tec_tenet_reform_and_opening$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_has_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_activate_cult_tec_cult_knowledge: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
@@ -65,6 +80,9 @@
  tec_cult_tec_cult_knowledge_modifier: "$tec_cult_tec_cult_knowledge$"
  tec_cult_tec_cult_knowledge_header: "§H$tec_cult_tec_cult_knowledge$§!"
  tec_cult_tec_cult_knowledge_key: "tec_cult_tec_cult_knowledge"
+ faction_demand_TEC_CULT_tec_cult_knowledge: "$tec_cult_tec_cult_knowledge$"
+ faction_demand_TEC_CULT_tec_cult_knowledge_liked_desc: "Having the §Y$tec_cult_tec_cult_knowledge$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_cult_knowledge_disliked_desc: "Having the §Y$tec_cult_tec_cult_knowledge$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_cult_prosperity_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
  tec_has_tec_cult_prosperity_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_prosperity']"
  tec_activate_cult_tec_cult_prosperity: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_prosperity']"
@@ -76,3 +94,6 @@
  tec_cult_tec_cult_prosperity_modifier: "$tec_cult_tec_cult_prosperity$"
  tec_cult_tec_cult_prosperity_header: "§H$tec_cult_tec_cult_prosperity$§!"
  tec_cult_tec_cult_prosperity_key: "tec_cult_tec_cult_prosperity"
+ faction_demand_TEC_CULT_tec_cult_prosperity: "$tec_cult_tec_cult_prosperity$"
+ faction_demand_TEC_CULT_tec_cult_prosperity_liked_desc: "Having the §Y$tec_cult_tec_cult_prosperity$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_cult_prosperity_disliked_desc: "Having the §Y$tec_cult_tec_cult_prosperity$§! Tenet displeases the [Root.GetName]"
