--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -22,6 +22,9 @@
  tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
  tec_cui_cult_invalid: "Invalid"
 
+ tec_cui_cult_faction_demand_liked_desc: "Having the §Y$CULT$§! Tenet pleases the [Root.GetName]"
+ tec_cui_cult_faction_demand_disliked_desc: "Having the §Y$CULT$§! Tenet displeases the [Root.GetName]"
+
  tec_cui_cult_active: "§ETenet Active§!"
  tec_cui_cult_effects_section: "§EEffects:§!"
  tec_cui_cult_current_effects_section: "§EActive Effects:§!"
