--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -423,6 +423,10 @@
 	TEC_FAC_COMP_NO_STRATIFIED_POPS:0 "Stratified Society"
 	TEC_FAC_COMP_STRATIFY_POPS_DESC:0 "$TEC_FAC_AUTH_STRATIFY_POPS_DESC$"
 
+	TEC_FAC_COMP_ENTREPRENEUR_GOOD_STANDARD_POPS:0 "Entrepreneurial Society"
+	TEC_FAC_COMP_ENTREPRENEUR_NO_GOOD_STANDARD_POPS:0 "Entrepreneurial Society"
+	TEC_FAC_COMP_ENTREPRENEUR_GOOD_STANDARD_POPS_DESC:0 "Ensuring §YBasic§! living standards or better for all the the entrepreneurs in our empire will §Gplease§! the [Root.GetName]"
+
 	TEC_FAC_COMP_MERCANTILE_STANCE:0 "Mercantile Stance"
 	TEC_FAC_COMP_NO_MERCANTILE:0 "No Mercantile Stance"
 	TEC_FAC_COMP_MERCANTILE_STANCE_DESC:0 "Not having a §YMercantile§! diplomatic stance §Rdisplease§! the [Root.GetName]."
