feat: materialist transitory tenet

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -1456,6 +1456,17 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 			policy_option_fanatic_tec_materialist_soc_statecraft_name:0 "$policy_option_tec_materialist_soc_statecraft$"
 			policy_option_fanatic_tec_materialist_soc_statecraft_desc:0 "$policy_option_tec_materialist_generalist_description$"
 
+            policy_option_tec_materialist_soc_psionics:0 "£zro£ Psionics Focus"
+            policy_option_tec_materialist_soc_psionics_name:0 "$policy_option_tec_materialist_soc_psionics$"
+            policy_option_tec_materialist_soc_psionics_desc:0 "$policy_option_tec_materialist_generalist_description$"
+
+            policy_option_tec_materialist_soc_archaeostudies:0 "£minor_artifacts£ Archaeostudies Focus"
+            policy_option_tec_materialist_soc_archaeostudies_name:0 "$policy_option_tec_materialist_soc_archaeostudies$"
+            policy_option_tec_materialist_soc_archaeostudies_desc:0 "$policy_option_tec_materialist_generalist_description$"
+
+            policy_option_tec_materialist_rare:0 "£mod_country_all_tech_research_speed£ Rare Technology Focus"
+            policy_option_tec_materialist_rare_name:0 "$policy_option_tec_materialist_rare$"
+            policy_option_tec_materialist_rare_desc:0 "$policy_option_tec_materialist_generalist_description$"
 		# Engineering
 			policy_option_tec_materialist_eng_industry:0 "£engineering£ Industry Focus"
 			policy_option_tec_materialist_eng_industry_name:0 "$policy_option_tec_materialist_eng_industry$"
