--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -39,11 +39,16 @@
 
  tec_cult_tec_tenet_state_religion: "State Religion"
  tec_cult_tec_tenet_state_religion_desc: "Our spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
- tec_cult_tec_tenet_state_religion_effect: "[GetPriestIcon] [GetPriestPlural] Political Power: §Y+0.5§!\n\nYou can build £building£ ['building:building_temple'] buildings on your planets and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\n\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_unity$§!"
+ tec_cult_tec_tenet_state_religion_effect: "[GetPriestIcon] [GetPriestPlural] Political Power: §Y+0.5§!\n\nCan build £building£ ['building:building_temple'] buildings on your planets and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\n\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_unity$§!"
+
+ tec_cult_tec_tenet_materialistic_views: "Philosophical Materialism"
+ tec_cult_tec_tenet_materialistic_views_desc: "We emphasize the primacy of the material world and empirical knowledge. While religion, superstition and mysticism might have a place in the hearts of our people, the focus is on scientific inquiry and tangible progress, ensuring advancements are grounded in reality and reason."
+ tec_cult_tec_tenet_materialistic_views_effect: "[GetResearcherPluralWithIcon] Political Power: §Y+0.5§!\n\nAllows the selection of §YResearch Category§! focus via policy\n\nCan use ['concept_tec_living_standard_academic_privilege_alias_icon'] Living Standards\n\nEmbracing any ['ethic:ethic_materialist'] Faction costs no §Y$tec_loc_unity$§!"
+
 
  tec_cult_tec_tenet_entrepreneur_economy: "Entrepreneur Economy"
  tec_cult_tec_tenet_entrepreneur_economy_desc: "Our economy thrives on the spirit of entrepreneurship, encouraging innovation and individual initiative. Citizens are empowered to pursue their ambitions, driving progress and prosperity through creativity and enterprise. "
- tec_cult_tec_tenet_entrepreneur_economy_effect: "$tec_private_hired$ $tec_loc_jobs$ and $job_trader_plural_with_icon$ Political Power: §Y+0.5§!\n\nYou can build £building£ ['concept_tec_ethic_building_entrepreneur'] on your planets\n\nEmbracing any ['ethic:ethic_competitive'] Faction costs no §Y$tec_loc_unity$§!"
+ tec_cult_tec_tenet_entrepreneur_economy_effect: "$tec_private_hired$ $tec_loc_jobs$ and $job_trader_plural_with_icon$ Political Power: §Y+0.5§!\n\nCan build £building£ ['concept_tec_ethic_building_entrepreneur'] on your planets\n\nEmbracing any ['ethic:ethic_competitive'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_public_employment: "Public Employment"
  tec_cult_tec_tenet_public_employment_desc: "Our society prioritizes public employment, ensuring that every citizen has a role in supporting communal well-being, providing a social security net."
