--- a/localisation/english/zz_evolved_opinion_l_english.yml
+++ b/localisation/english/zz_evolved_opinion_l_english.yml
@@ -1,64 +1,23 @@
 ﻿l_english:
- opinion_cooperative_pos_1:0 "Socialist Comrades"
- opinion_cooperative_pos_2:0 "Socialist Comrades"
- opinion_cooperative_pos_3:0 "Socialist Comrades"
- opinion_cooperative_pos_4:0 "Socialist Comrades"
- 
- opinion_cooperative_neg_1:0 "Communist Tyrants"
- opinion_cooperative_neg_2:0 "Communist Tyrants"
- opinion_cooperative_neg_3:0 "Communist Tyrants"
- opinion_cooperative_neg_4:0 "Communist Tyrants"
- 
- opinion_competitive_pos_1:0 "Free Marketeers"
- opinion_competitive_pos_2:0 "Free Marketeers"
- opinion_competitive_pos_3:0 "Free Marketeers"
- opinion_competitive_pos_4:0 "Free Marketeers"
- 
- opinion_competitive_neg_1:0 "Capitalist Exploiters"
- opinion_competitive_neg_2:0 "Capitalist Exploiters"
- opinion_competitive_neg_3:0 "Capitalist Exploiters"
- opinion_competitive_neg_4:0 "Capitalist Exploiters"
- 
- opinion_ecologist_pos_1:0 "Friends of Nature"
- opinion_ecologist_pos_2:0 "Friends of Nature"
- opinion_ecologist_pos_3:0 "Friends of Nature"
- opinion_ecologist_pos_4:0 "Friends of Nature"
- 
- opinion_ecologist_neg_1:0 "Dumb-ass Tree-Huggers"
- opinion_ecologist_neg_2:0 "Dumb-ass Tree-Huggers"
- opinion_ecologist_neg_3:0 "Dumb-ass Tree-Huggers"
- opinion_ecologist_neg_4:0 "Dumb-ass Tree-Huggers" 
- 
- opinion_industrial_pos_1:0 "Fellow Engineers"
- opinion_industrial_pos_2:0 "Fellow Engineers"
- opinion_industrial_pos_3:0 "Fellow Engineers"
- opinion_industrial_pos_4:0 "Fellow Engineers"
- 
- opinion_industrial_neg_1:0 "Rattle Metalheads"
- opinion_industrial_neg_2:0 "Rattle Metalheads"
- opinion_industrial_neg_3:0 "Rattle Metalheads"
- opinion_industrial_neg_4:0 "Rattle Metalheads"
- 
- opinion_pluralist_pos_1:0 "Pluralist Brothers"
- opinion_pluralist_pos_2:0 "Pluralist Brothers"
- opinion_pluralist_pos_3:0 "Pluralist Brothers"
- opinion_pluralist_pos_4:0 "Pluralist Brothers"
- 
- opinion_pluralist_neg_1:0 "Pluralist Rabble"
- opinion_pluralist_neg_2:0 "Pluralist Rabble"
- opinion_pluralist_neg_3:0 "Pluralist Rabble"
- opinion_pluralist_neg_4:0 "Pluralist Rabble" 
+ triggered_opinion_of_cooperative:0 "Collectivist Tyrants"
+ triggered_opinion_of_cooperative_pos:0 "Cooperative Comrades"
+ triggered_opinion_of_competitive: "Competitive Exploiters"
+ triggered_opinion_of_competitive_pos: "Free Marketeers"
 
- opinion_elitist_pos_1:0 "Noble Aristocrats"
- opinion_elitist_pos_2:0 "Noble Aristocrats"
- opinion_elitist_pos_3:0 "Noble Aristocrats"
- opinion_elitist_pos_4:0 "Noble Aristocrats"
- 
- opinion_elitist_neg_1:0 "Arrogant Rats"
- opinion_elitist_neg_2:0 "Arrogant Rats"
- opinion_elitist_neg_3:0 "Arrogant Rats"
- opinion_elitist_neg_4:0 "Arrogant Rats"
- 
- opinion_capitalists_vs_collectivists:0 "Lazy indoctrinated"
- opinion_socialists_vs_individualists:0 "Selfish blatants"
+ triggered_opinion_of_ecologist: "Dumb-ass Tree-Huggers"
+ triggered_opinion_of_ecologist_pos: "Friends of Nature"
+ triggered_opinion_of_industrialist: "Rattle Metalheads"
+ triggered_opinion_of_industrialist_pos: "Fellow Industrialists"
 
+ triggered_opinion_of_pluralist: "Pluralist Rabble"
+ triggered_opinion_of_pluralist_pos: "Pluralist Brothers"
+ triggered_opinion_of_elitist: "Arrogant Rats"
+ triggered_opinion_of_elitist_pos: "Noble Aristocrats"
+ 
+ opinion_capitalists_vs_collectivists:0 "Lazy Bastards"
+ opinion_socialists_vs_individualists:0 "Selfish Bastards"
+
+ triggered_opinion_tec_tenet_reform_and_opening: "Opened Markets"
+ triggered_opinion_tec_tenet_public_employment: "Cooperative State Apparatus"
+ triggered_opinion_tec_tenet_entrepreneur_economy: "Privatized Economy"
+ triggered_opinion_tec_tenet_state_religion: "$tec_cult_tec_tenet_state_religion$"
