--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -375,7 +375,8 @@
 	TEC_TAG_MATERIALIST_BONUS_POLICY_TRADE: "$TEC_TAG_BONUS_POLICY$: Can use ['concept_tec_policy_option_trade_policy_innovation_alias_icon'] Policy Option"
 	TEC_TAG_MATERIALIST_BONUS_LIVING_STANDARD_ACADEMIC:0 "$TEC_TAG_BONUS_LIVING_STANDARD$ Can use ['concept_tec_living_standard_academic_privilege_alias_icon'] Living Standards"
 	TEC_TAG_MATERIALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_technological_funding_alias_icon'] Edict"
-	TEC_TAG_MATERIALIST_BONUS_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Can build ['concept_tec_ethic_building_experimental_labs'] buildings"
+	TEC_TAG_MATERIALIST_BONUS_MECHANIC:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §YResearch Category§! focus via policy."
+	TEC_TAG_MATERIALIST_BONUS_MECHANIC_OLD:0 "$TEC_TAG_BONUS_MECHANIC$ Can build ['concept_tec_ethic_building_experimental_labs'] buildings"
 
 	edict_tec_materialist_edict:0 "Technological Funding"
 	edict_tec_materialist_edict_desc:0 "§EMaterialist Ethic Edict§!\n\nScience is the true way to go forward, discovering new technologies is a duty we must reward accordingly."
@@ -514,8 +515,8 @@
 	TEC_TAG_PLURALIST_BONUS_EDICT:0 "$TEC_TAG_BONUS_EDICT$ Can use ['concept_tec_edict_tec_equal_opportunities_alias_icon'] Edict"
 	TEC_TAG_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a §YSmall§! amount of §YMonthly Experience§!. Non active leaders gain double the amount"
 	TEC_TAG_FANATIC_PLURALIST_BONUS_MECHANIC_PASSIVE_EXP:0 "$TEC_TAG_BONUS_MECHANIC$ Leaders gain a §YModerate§! amount of §YMonthly Experience§!. Non active leaders gain double the amount"
-	TEC_TAG_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+1§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
-	TEC_TAG_FANATIC_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+2§! §Y$tec_loc_all_leaders$ Leader capacity§! of a specific leader type via policy."
+	TEC_TAG_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+1§! §Y$tec_loc_all_leaders$ Leader Capacity§! of a specific leader type via policy."
+	TEC_TAG_FANATIC_PLURALIST_BONUS_SELECTABLE_LEADER_CAP:0 "$TEC_TAG_BONUS_MECHANIC$ Allows the selection of §G+2§! §Y$tec_loc_all_leaders$ Leader Capacity§! of a specific leader type via policy."
 	TEC_TAG_PLURALIST_AND_EGALITARIAN_SWAP_AUTHORITY: "$TEC_TAG_AUTHORITY_SWAP$ With ['ethic:ethic_egalitarian'], ['authority:auth_democratic'] is replaced by ['authority:auth_democratic:auth_direct_democratic'] Authority"
 
 
