--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -27,6 +27,20 @@
  faction_demand_TEC_CULT_tec_tenet_state_religion: "$tec_cult_tec_tenet_state_religion$"
  faction_demand_TEC_CULT_tec_tenet_state_religion_liked_desc: "Having the §Y$tec_cult_tec_tenet_state_religion$§! Tenet pleases the [Root.GetName]"
  faction_demand_TEC_CULT_tec_tenet_state_religion_disliked_desc: "Having the §Y$tec_cult_tec_tenet_state_religion$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_materialistic_views_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_has_tec_tenet_materialistic_views_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_activate_cult_tec_tenet_materialistic_views: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_deactivate_cult_tec_tenet_materialistic_views: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_has_last_activated_tec_tenet_materialistic_views_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_has_last_activated_tec_tenet_materialistic_views_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_has_last_deactivated_tec_tenet_materialistic_views_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_has_last_deactivated_tec_tenet_materialistic_views_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_materialistic_views']"
+ tec_cult_tec_tenet_materialistic_views_modifier: "$tec_cult_tec_tenet_materialistic_views$"
+ tec_cult_tec_tenet_materialistic_views_header: "§H$tec_cult_tec_tenet_materialistic_views$§!"
+ tec_cult_tec_tenet_materialistic_views_key: "tec_cult_tec_tenet_materialistic_views"
+ faction_demand_TEC_CULT_tec_tenet_materialistic_views: "$tec_cult_tec_tenet_materialistic_views$"
+ faction_demand_TEC_CULT_tec_tenet_materialistic_views_liked_desc: "Having the §Y$tec_cult_tec_tenet_materialistic_views$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_materialistic_views_disliked_desc: "Having the §Y$tec_cult_tec_tenet_materialistic_views$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_tenet_entrepreneur_economy_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_has_tec_tenet_entrepreneur_economy_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
  tec_activate_cult_tec_tenet_entrepreneur_economy: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_entrepreneur_economy']"
