feat: added egalitarian transitory tenet

--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -83,6 +83,20 @@
  faction_demand_TEC_CULT_tec_tenet_reform_and_opening: "$tec_cult_tec_tenet_reform_and_opening$"
  faction_demand_TEC_CULT_tec_tenet_reform_and_opening_liked_desc: "Having the §Y$tec_cult_tec_tenet_reform_and_opening$§! Tenet pleases the [Root.GetName]"
  faction_demand_TEC_CULT_tec_tenet_reform_and_opening_disliked_desc: "Having the §Y$tec_cult_tec_tenet_reform_and_opening$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_keys_to_power_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_has_tec_tenet_keys_to_power_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_activate_cult_tec_tenet_keys_to_power: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_deactivate_cult_tec_tenet_keys_to_power: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_has_last_activated_tec_tenet_keys_to_power_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_has_last_activated_tec_tenet_keys_to_power_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_has_last_deactivated_tec_tenet_keys_to_power_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_has_last_deactivated_tec_tenet_keys_to_power_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_keys_to_power']"
+ tec_cult_tec_tenet_keys_to_power_modifier: "$tec_cult_tec_tenet_keys_to_power$"
+ tec_cult_tec_tenet_keys_to_power_header: "§H$tec_cult_tec_tenet_keys_to_power$§!"
+ tec_cult_tec_tenet_keys_to_power_key: "tec_cult_tec_tenet_keys_to_power"
+ faction_demand_TEC_CULT_tec_tenet_keys_to_power: "$tec_cult_tec_tenet_keys_to_power$"
+ faction_demand_TEC_CULT_tec_tenet_keys_to_power_liked_desc: "Having the §Y$tec_cult_tec_tenet_keys_to_power$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_keys_to_power_disliked_desc: "Having the §Y$tec_cult_tec_tenet_keys_to_power$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_has_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_activate_cult_tec_cult_knowledge: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
