--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -58,6 +58,10 @@
  tec_cult_tec_tenet_reform_and_opening_desc: "Embracing external investment and innovation, blending them with our cooperative principles. We strive to revitalizes our economy, encourages technological advancement, and strengthens international ties while maintaining our core values and social structure."
  tec_cult_tec_tenet_reform_and_opening_effect: "$MOD_PLANET_MAX_BUILDINGS_ADD$ (On Tier 2 Capitals and above): §R-1§!\n\nIncreased §Y$tec_loc_opinion$§! with ['concept_tec_authority_type_corporate'] Empires\n\n§Y£building£ Branch Office Capital§! buildings on your planets have reduce §Y$tec_loc_influence$§! Cost"
 
+ tec_cult_tec_tenet_keys_to_power: "Keys to Power"
+ tec_cult_tec_tenet_keys_to_power_desc: "Our leadership wisely expands the distribution of power among key individuals, fostering loyalty and stability. By sharing authority and responsibilities, we prevent unrest and ensure a harmonious and effective governance, securing the prosperity and unity of our society."
+ tec_cult_tec_tenet_keys_to_power_effect: "£job_clerk£ $job_clerk_plural$ Political Power: §Y+0.5§!\n\nCan use ['concept_tec_edict_encourage_free_thought_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_egalitarian'] Faction costs no §Y$tec_loc_unity$§!"
+
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
 
