feat: auth transitory tenet

--- a/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
+++ b/localisation/english/zz_evolved_autogenerated_cult_l_english.yml
@@ -97,6 +97,20 @@
  faction_demand_TEC_CULT_tec_tenet_keys_to_power: "$tec_cult_tec_tenet_keys_to_power$"
  faction_demand_TEC_CULT_tec_tenet_keys_to_power_liked_desc: "Having the §Y$tec_cult_tec_tenet_keys_to_power$§! Tenet pleases the [Root.GetName]"
  faction_demand_TEC_CULT_tec_tenet_keys_to_power_disliked_desc: "Having the §Y$tec_cult_tec_tenet_keys_to_power$§! Tenet displeases the [Root.GetName]"
+ tec_has_tec_tenet_executive_aggrandizement_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_has_tec_tenet_executive_aggrandizement_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_activate_cult_tec_tenet_executive_aggrandizement: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_deactivate_cult_tec_tenet_executive_aggrandizement: "$tec_deactivate_cult_effect$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_has_last_activated_tec_tenet_executive_aggrandizement_yes: "£trigger_yes£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_has_last_activated_tec_tenet_executive_aggrandizement_no: "£trigger_no£ $tec_has_empire_last_activated_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_has_last_deactivated_tec_tenet_executive_aggrandizement_yes: "£trigger_yes£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_has_last_deactivated_tec_tenet_executive_aggrandizement_no: "£trigger_no£ $tec_has_empire_last_deactivated_cult$ ['tradition:tec_cult_tec_tenet_executive_aggrandizement']"
+ tec_cult_tec_tenet_executive_aggrandizement_modifier: "$tec_cult_tec_tenet_executive_aggrandizement$"
+ tec_cult_tec_tenet_executive_aggrandizement_header: "§H$tec_cult_tec_tenet_executive_aggrandizement$§!"
+ tec_cult_tec_tenet_executive_aggrandizement_key: "tec_cult_tec_tenet_executive_aggrandizement"
+ faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement: "$tec_cult_tec_tenet_executive_aggrandizement$"
+ faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement_liked_desc: "Having the §Y$tec_cult_tec_tenet_executive_aggrandizement$§! Tenet pleases the [Root.GetName]"
+ faction_demand_TEC_CULT_tec_tenet_executive_aggrandizement_disliked_desc: "Having the §Y$tec_cult_tec_tenet_executive_aggrandizement$§! Tenet displeases the [Root.GetName]"
  tec_has_tec_cult_knowledge_yes: "£trigger_yes£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_has_tec_cult_knowledge_no: "£trigger_no£ $tec_has_empire_cult$ ['tradition:tec_cult_tec_cult_knowledge']"
  tec_activate_cult_tec_cult_knowledge: "$tec_activate_cult_effect$ ['tradition:tec_cult_tec_cult_knowledge']"
