--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -62,6 +62,10 @@
  tec_cult_tec_tenet_keys_to_power_desc: "Our leadership wisely expands the distribution of power among key individuals, fostering loyalty and stability. By sharing authority and responsibilities, we prevent unrest and ensure a harmonious and effective governance, securing the prosperity and unity of our society."
  tec_cult_tec_tenet_keys_to_power_effect: "£job_clerk£ $job_clerk_plural$ Political Power: §Y+0.5§!\n\nCan use ['concept_tec_edict_encourage_free_thought_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_egalitarian'] Faction costs no §Y$tec_loc_unity$§!"
 
+ tec_cult_tec_tenet_executive_aggrandizement: "Executive Aggrandizement"
+ tec_cult_tec_tenet_executive_aggrandizement_desc: "Our leadership gradually consolidates power, subtly expanding its influence and control. Through carefully orchestrated measures, authority is centralized, ensuring stability and decisive governance while maintaining the facade of traditional structures."
+ tec_cult_tec_tenet_executive_aggrandizement_effect: "£job_enforcer£ $job_enforcer_plural$ Political Power: §Y+0.5§!\n\nCan use ['concept_tec_living_standard_stratified_alias_icon'] Living Standards\n\nEmbracing any ['ethic:ethic_authoritarian'] Faction costs no §Y$tec_loc_unity$§!"
+
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
 
